# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-10-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_service:mcast_async_active function variations along with
      cloudi_service:mcast_async_passive functions to mirror what is already
      available for cloudi_service:send_async

2013-10-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Use the mac address set in the cloudi_core application env for
      uuid (v1) generator creation
    * Update uuid

2013-10-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix bug reported by Anton Ryabkov:
      an unsubscribe of an exact match for a service name was not removing
      the entry when no services were subscribed (an empty group), so a
      pattern matching subscription that existed would be ignored, despite
      the fact no services were within the exact service name match. The fix
      removes entries when no services are subscribed to the service name, so
      there is no problem with the service name pattern match.

2013-09-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Separate the cloudi_services_internal, cloudi_services_databases, and
      cloudi_services_messaging Erlang applications into a single
      Erlang application for each CloudI service to help isolate
      CloudI service Erlang application dependencies
    * Update all dependencies to have {registered, []}, to keep relx happy
    * Add the hello_world4 example to show how CloudI can be included with
      a relx release
    * Add the application_name internal service configuration option to
      specify an Erlang application name that doesn't need to be the
      CloudI service module name

2013-09-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the monkey_latency and monkey_chaos service configuration
      options for providing any service configuration a way to change