@@ -59,6 +59,7 @@
         cloudi_service_http_cowboy,
         cloudi_service_http_elli,
         cloudi_service_map_reduce,
+        cloudi_service_quorum,
         cloudi_service_tcp,
         cloudi_service_timers,
         cloudi_service_udp,
