@@ -1,0 +1,16 @@
+%-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
+% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et:
+
+{application, cloudi_service_quorum, 
+  [{description, "Quorum CloudI Service"},
+   {vsn, "@VERSION@"},
+   {modules, [
+        cloudi_service_quorum
+        ]},
+   {registered, []},
+   {applications, [
+        %cloudi_core, % makes relx break
+        stdlib,
+        kernel
+        ]}]}.
+
